# swordfish

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  testing.yml
docs/: about.rst  build.rst  conf.py  index.rst
scripts/: deps.py
src/: CMakeLists.txt  config.hpp.in  main.cpp  utils.cpp  utils.hpp
src/eval/: CMakeLists.txt  eval.cpp  eval.hpp  material.cpp
src/position/: CMakeLists.txt  functions.cpp  methods.cpp  movegen.cpp  position.hpp
src/search/: CMakeLists.txt  search.cpp  search.hpp
src/sfeval/: CMakeLists.txt  eval.cpp  sfeval.hpp
src/sfmovegen/: CMakeLists.txt  movegen.cpp  sfmovegen.hpp
src/sfsearch/: CMakeLists.txt  perft.cpp  search.cpp  sfsearch.hpp  transposition.hpp  uci.cpp
src/sfuci/: CMakeLists.txt  command.cpp  result.cpp  sfuci.hpp
src/sfutils/: CMakeLists.txt  constants.hpp  fen.cpp  position.cpp  position.hpp  repr.cpp  sfutils.hpp
src/tests/: CMakeLists.txt  general.cpp  main.cpp  position.cpp  tests.cpp  tests.hpp  utils.cpp
src/uci/: CMakeLists.txt  functions.cpp  info.cpp  uci.hpp
src/utils/: CMakeLists.txt  position.cpp  utils.hpp
tests/: lichess_puzzle.py  perft.py  perft_all.sh
